THIS CHANGELOG IS AN ATTEMPT TO DOCUMENT CHANGES TO THIS PROJECT.

PL-node-v0.8.2
 - FIX: Added grunt-contrib-copy args to copy all found source/css/*.css
 - ADD: Added upgrade instructions to README
 - FIX: Fix issue with styleguide accordions not closing upon click of a sibling menu.
 - THX: @getsetbro for reporting more issues :) 

PL-node-v0.8.1
 - FIX: v8 is not pulling in values from global data.json
 - FIX: MQ list breaks if media queries don't have spaces
 - THX: @getsetbro for reporting these issues :D
 - THX: @dmolsen for a cheat codes

PL-node-v0.8.0
 - CHG: note the change in versioning to proper semver. wanted to do ths to inch closer to a 1.0.0 release
 - DEL: deleted most of the lingering PHP sync listener code
 - FIX: support for displaying the HTML and Mustache in the code viewer
 - ADD: pattern link support
 - CHG: updated included mustache templates to reflect pattern links in navigation and compiling pages direct from templates
 - THX: @getsetbro for finding and fixing a typo
 - FIX: fixed a bug preventing pattern states from displaying on the flat template/pages
 - ADD: support for basic pseudo-patterns
 - CHG: cleaned up patternlab.js a bit for future testing, a bit more DRYness.

PL-node-v0.1.7
 - ADD: pattern export
 - CHG: updated devDependencies
 - FIX: fixed a type in the README and config
 - THX: thanks @seanhussey for the pull request!

PL-node-v0.1.6
 - ADD: media queries found in css added to ish controls
 - ADD: basic lineage support
 - ADD: more unit tests

PL-node-v0.1.5
 - ADD: Live reload support for grunt serve task
 - THX: thanks @marcinmodestowicz for the configuration fix. VERY useful :)

PL-node-v0.1.4
 - FIX: Resolved issue with nested pattern rendering
 - FIX: Supporting flat pattern name regex's in unix-systems
 - THX: thanks @torbs for the issue and pull request

PL-node-v0.1.3
 - ADD: Pattern states
 - ADD: Ships with grunt connect if you are into that kinda thing