@@ -6,7 +6,8 @@
 	<meta name="viewport" content="width=device-width" />
 	<link rel="stylesheet" href="styleguide/css/styleguide.css" media="all" />
 	<link rel="stylesheet" href="styleguide/css/styleguide-specific.css" media="all" />
-	<link rel="stylesheet" href="styleguide/css/prism.css" media="all" />
+	<link rel="stylesheet" href="styleguide/css/vendor/typeahead.css" media="all" />
+	<link rel="stylesheet" href="styleguide/css/vendor/prism.css" media="all" />
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="styleguide/js/vendor/jquery.js"><\/script>')</script>
 </head>
@@ -79,6 +80,7 @@
 
 	<script src="styleguide/js/vendor/prism.js"></script>
 	<script src="styleguide/js/vendor/jwerty.js"></script>
+	<script src="styleguide/js/vendor/typeahead.bundle.min.js"></script>
 	<script src="styleguide/js/data-saver.js"></script>
 	{{> patternPaths }}
 	{{> viewAllPaths }}
@@ -86,5 +88,7 @@
 	<script src="styleguide/js/styleguide.js"></script>
 	<script src="styleguide/js/annotations-viewer.js "></script>
 	<script src="styleguide/js/code-viewer.js "></script>
+	<script src="styleguide/js/pattern-finder.js"></script>
+
 </body>
 </html>
