@@ -62,7 +62,6 @@
 		<script src="../../styleguide/js/postmessage.js"></script>
 		<script src="../../data/annotations.js"></script>
 		<script src="../../styleguide/js/annotations-pattern.js"></script>
-		<script src="../../styleguide/js/code-pattern.js"></script>
-		
+		<script src="../../styleguide/js/code-pattern.js"></script>		
 	</body>
 </html>
